src/snapshots/raoul__tests__run_vm_is_ok@read.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/read.ra
---
[
    "test",
    "\n",
]
