src/snapshots/raoul__tests__run_vm_is_ok@returns-condition.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/returns-condition.ra
---
[
    "1",
    "3",
    "\n",
]
