src/snapshots/raoul__tests__run_vm_is_ok@weird-return.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/non-plot/weird-return.ra
---
[
    "1",
    "\n",
]
