src/snapshots/raoul__tests__run_vm_is_ok@while-return.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/while-return.ra
---
[
    "1",
    "\n",
    "2",
    "\n",
    "3",
    "\n",
    "4",
    "\n",
    "5",
    "\n",
    "6",
    "\n",
    "7",
    "\n",
    "8",
    "\n",
    "9",
    "\n",
    "10",
    "\n",
]
