src/snapshots/raoul__tests__run_vm_is_ok@while.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/while.ra
---
[
    "10",
    "\n",
]
